# NoteSync.ai

./: .gitignore  GEMINI.md  NoteSync_Ghost.vbs  README.md  package-lock.json  package.json  stop.bat
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: backend.agent.md  frontend.agent.md
.github/prompts/: backend.prompt.md  frontend.prompts.md
backend/: .env.example  FFMPEG.md  README.md  alembic.ini  api.spec  build_sidecar.py  delete_test_results.py  requirements.txt  run.py
backend/app/: __init__.py  database.py  main.py  orchestrator.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: exceptions.py  settings.py
backend/app/db/: __init__.py  base.py  enums.py  models.py  session.py
backend/app/models/: __init__.py  annotation.py  course.py  keyword.py  material.py  note.py  (+3 more)
backend/migrations/: env.py
backend/samples/: lecture.m4a
backend/scripts/: cleanup_storage.py  migrate.sh  smoke_e2e.py  smoke_e2e.sh
backend/spec/: notesync-backend.spec  notesync-config.spec
docs/: .bkit-memory.json  .pdca-status.json  api-contract.md  backend-api-design.md  context.md  domain-model.md  pipeline-flow.md  prd-classroom.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: academic.ts  client.ts  content.ts
src/components/: SessionModal.tsx  UploadModal.tsx
src/hooks/: usePolling.ts
src/store/: useAppStore.ts
(+115 files in other folders)
